@@ -150,12 +150,13 @@ fun prove_primrec_thms (config : Old_Datatype_Aux.config) new_type_names descr
     val ({intrs = rec_intrs, elims = rec_elims, ...}, thy1) =
       thy0
       |> Sign.concealed
-      |> Inductive.add_inductive_global
+      |> Named_Target.theory_map_result Inductive.transform_result
+          (Inductive.add_inductive
           {quiet_mode = #quiet config, verbose = false, alt_name = Binding.name big_rec_name',
             coind = false, no_elim = false, no_ind = true, skip_mono = true}
           (map (fn (s, T) => ((Binding.name s, T), NoSyn)) (rec_set_names' ~~ rec_set_Ts))
           (map dest_Free rec_fns)
-          (map (fn x => (Binding.empty_atts, x)) rec_intr_ts) []
+          (map (fn x => (Binding.empty_atts, x)) rec_intr_ts) [])
       ||> Sign.restore_naming thy0;
 
     (* prove uniqueness and termination of primrec combinators *)
